tests/ui/consts/issue-56164.stderr
error[E0277]: the trait bound `[closure@$DIR/issue-56164.rs:1:19: 1:21]: Fn<()>` is not satisfied
  --> $DIR/issue-56164.rs:1:18
   |
LL | const fn foo() { (||{})() }
   |                  ^^^^^^^^ expected an `Fn<()>` closure, found `[closure@$DIR/issue-56164.rs:1:19: 1:21]`
   |
   = help: the trait `~const Fn<()>` is not implemented for closure `[closure@$DIR/issue-56164.rs:1:19: 1:21]`
note: the trait `Fn<()>` is implemented for `[closure@$DIR/issue-56164.rs:1:19: 1:21]`, but that implementation is not `const`
  --> $DIR/issue-56164.rs:1:18
   |
LL | const fn foo() { (||{})() }
   |                  ^^^^^^^^
   = note: wrap the `[closure@$DIR/issue-56164.rs:1:19: 1:21]` in a closure with no arguments: `|| { /* code */ }`

error[E0015]: cannot call non-const closure in constant functions
  --> $DIR/issue-56164.rs:1:18
   |
LL | const fn foo() { (||{})() }
   |                  ^^^^^^^^
   |
   = note: closures need an RFC before allowed to be called in constant functions
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants
   = help: add `#![feature(const_trait_impl)]` to the crate attributes to enable

error: function pointer calls are not allowed in constant functions
  --> $DIR/issue-56164.rs:6:5
   |
LL |     input()
   |     ^^^^^^^

note: erroneous constant used
  --> $DIR/issue-56164.rs:1:18
   |
LL | const fn foo() { (||{})() }
   |                  ^^^^^^

note: erroneous constant used
  --> $DIR/issue-56164.rs:1:18
   |
LL | const fn foo() { (||{})() }
   |                  ^^^^^^

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0015, E0277.
For more information about an error, try `rustc --explain E0015`.
